# redpanda

cmake/: dependencies.cmake
src/v/: CMakeLists.txt
src/v/archival/: archiver_manager.cc  archiver_manager.h  arrow_writer.cc  arrow_writer.h  ntp_archiver_service.cc  ntp_archiver_service.h  protobuf_to_arrow.h
src/v/archival/tests/: CMakeLists.txt  arrow_writer_gtest.cc  arrow_writer_test.cc  arrow_writer_test_utils.h
src/v/cluster/: CMakeLists.txt  partition.cc  partition.h  partition_manager.cc  partition_manager.h
src/v/datalake/: CMakeLists.txt  arrow_converter_interface.h  arrow_translator.cc  arrow_translator.h  arrow_writer.cc  arrow_writer.h  arrow_writing_consumer.cc  arrow_writing_consumer.h  batching_parquet_writer.cc  batching_parquet_writer.h  data_writer_interface.h  errors.h  parquet_writer.cc  parquet_writer.h  proto_to_arrow_interface.h  proto_to_arrow_map.cc  proto_to_arrow_map.h  proto_to_arrow_repeated.cc  proto_to_arrow_repeated.h  proto_to_arrow_scalar.cc  proto_to_arrow_scalar.h  proto_to_arrow_struct.cc  proto_to_arrow_struct.h  protobuf_to_arrow.h  protobuf_to_arrow_converter.cc  protobuf_to_arrow_converter.h  record_multiplexer.cc  record_multiplexer.h  schema_registry.cc  schema_registry.h  schema_registry_interface.h  schemaless_arrow_converter.cc  schemaless_arrow_converter.h  schemaless_translator.cc  schemaless_translator.h
src/v/datalake/tests/: CMakeLists.txt  arrow_writer_gtest.cc  arrow_writer_test.cc  arrow_writer_test_utils.h  batching_parquet_writer_test.cc  gtest_record_multiplexer_test.cc  parquet_writer_test.cc  proto_to_arrow_gtest.cc  proto_to_arrow_test_utils.h  test_data_writer.h
src/v/redpanda/: application.cc  application.h
